--- a/App/app.json
+++ b/App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "foodreview",
-    "slug": "foodreview",
+    "name": "lighton",
+    "slug": "lighton",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
